// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#DetailItemComponent render with font size of amount is 12 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 5,
      "marginBottom": 15,
      "width": 355,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1e90ff",
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "padding": 7,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontWeight": "bold",
        }
      }
    >
      January
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 5,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "padding": 6,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#01ABE9",
            "borderRadius": 5,
            "height": 10,
            "marginRight": 5,
            "marginVertical": 5,
            "width": 10,
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 13,
            "width": 55,
          }
        }
      >
        Jenius
      </Text>
      <Text
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Rp1000.000
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#e1e1e1",
        "borderTopWidth": 1,
        "justifyContent": "center",
        "marginTop": 5,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    />
  </View>
</View>
`;

exports[`#DetailItemComponent render with font size of amount is 14 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 5,
      "marginBottom": 15,
      "width": 355,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1e90ff",
        "borderTopLeftRadius": 5,
        "borderTopRightRadius": 5,
        "padding": 7,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontWeight": "bold",
        }
      }
    >
      January
    </Text>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 5,
      }
    }
  >
    <View
      key="0"
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "padding": 6,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#01ABE9",
            "borderRadius": 5,
            "height": 10,
            "marginRight": 5,
            "marginVertical": 5,
            "width": 10,
          }
        }
      />
      <Text
        style={
          Object {
            "fontSize": 13,
            "width": 55,
          }
        }
      >
        Jenius
      </Text>
      <Text
        style={
          Object {
            "fontSize": 12,
          }
        }
      >
        Rp1000.000.000.000
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderTopColor": "#e1e1e1",
        "borderTopWidth": 1,
        "justifyContent": "center",
        "marginTop": 5,
        "paddingVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    />
  </View>
</View>
`;
